--- a/vnt/win-tun-tap/Cargo.toml
+++ b/vnt/win-tun-tap/Cargo.toml
@@ -7,13 +7,15 @@ edition = "2021"
 
 [dependencies]
 log = "0.4.17"
-winreg = "0.51.0"
 scopeguard = "1.1"
 libloading = "0.8.0"
 widestring = "1.0.2"
 once_cell = "1.8"
 itertools = "0.11.0"
 rand = "0.8.5"
+
+[target.'cfg(windows)'.dependencies]
+winreg = "0.51.0"
 
 [dependencies.winapi]
 version = "0.3"
