add submodule libsm

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "rust-openssl"]
 	path = rust-openssl
 	url = https://github.com/nneesshh/rust-openssl
+[submodule "libsm"]
+	path = libsm
+	url = https://github.com/nneesshh/libsm
